--- a/Qt/mkspecs/darwin-g++/qmake.conf
+++ b/Qt/mkspecs/darwin-g++/qmake.conf
@@ -10,7 +10,7 @@ DEFINES                += __USE_WS_X11__
 
 include(../common/gcc-base-unix.conf)
 include(../common/g++-unix.conf)
-include(../common/bsd.conf)
+include(../common/bsd/bsd.conf)
 
 QMAKE_CFLAGS_THREAD     =
 QMAKE_CXXFLAGS_THREAD   =
