--- a/Qt/mkspecs/freebsd-clang/qmake.conf
+++ b/Qt/mkspecs/freebsd-clang/qmake.conf
@@ -5,9 +5,9 @@
 QMAKE_PLATFORM          = freebsd
 
 include(../common/clang.conf)
-include(../common/bsd.conf)
+include(../common/bsd/bsd.conf)
 
-QMAKE_CFLAGS_THREAD     = -pthread -D_THREAD_SAFE
+QMAKE_CFLAGS_THREAD     = -pthread
 QMAKE_CXXFLAGS_THREAD   = $$QMAKE_CFLAGS_THREAD
 
 load(qt_config)
