--- a/Qt/mkspecs/freebsd-g++/qmake.conf
+++ b/Qt/mkspecs/freebsd-g++/qmake.conf
@@ -6,7 +6,7 @@ QMAKE_PLATFORM          = freebsd
 
 include(../common/g++-unix.conf)
 include(../common/gcc-base-unix.conf)
-include(../common/bsd.conf)
+include(../common/bsd/bsd.conf)
 
 QMAKE_CFLAGS_THREAD     = -pthread -D_THREAD_SAFE
 QMAKE_CXXFLAGS_THREAD   = $$QMAKE_CFLAGS_THREAD
