--- a/Qt/mkspecs/netbsd-g++/qmake.conf
+++ b/Qt/mkspecs/netbsd-g++/qmake.conf
@@ -6,7 +6,7 @@ QMAKE_PLATFORM          = netbsd
 
 include(../common/g++-unix.conf)
 include(../common/gcc-base-unix.conf)
-include(../common/bsd.conf)
+include(../common/bsd/bsd.conf)
 
 QMAKE_LINK_SHLIB_CMD    = $$QMAKE_LINK_SHLIB $$QMAKE_LFLAGS_SHLIB $(LFLAGS) $$QMAKE_LFLAGS -o $(TARGETD) $(OBJECTS) $(OBJMOC) $(LIBS)
 QMAKE_LFLAGS_NOUNDEF    = -Wl,-no_unresolved
