--- a/Qt/mkspecs/openbsd-g++/qmake.conf
+++ b/Qt/mkspecs/openbsd-g++/qmake.conf
@@ -6,7 +6,7 @@ QMAKE_PLATFORM          = openbsd
 
 include(../common/g++-unix.conf)
 include(../common/gcc-base-unix.conf)
-include(../common/bsd.conf)
+include(../common/bsd/bsd.conf)
 
 QMAKE_INCDIR_PREPEND    = $(OPENBSD_INCDIR_PREPEND)
 
